# sdl2-specs-template

./: Cargo.toml  README.md
src/: components.rs  main.rs  resources.rs  systems.rs
